# www.synclang.org

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  example.js  index.html  test.cpp
.github/workflows/: emscripten_deploy.yml
play/: index.html  play.js  play.wasm  style.css
scripts/: configure_emscripten.sh
syncWeb/: index.html  style.css  variables.css
syncWeb/assets/: README.md
syncWeb/play/: README.md  index.html  style.css
wasm/: play.js  play.wasm
